fix: fix table scrolling on small screens

--- a/src/pages/calendar/calendar.less
+++ b/src/pages/calendar/calendar.less
@@ -45,19 +45,11 @@
       tbody tr th {
         vertical-align: middle;
       }
-      
+
       a {
         font-size: unset;
         white-space: nowrap;
       }
-    }
-  }
-
-  @media (max-width: 659px) {
-    .calendar-table {
-      width: 100%;
-      display: block;
-      overflow-x: auto;
     }
   }
 
